Text align fix for info banner for mobile

--- a/kicweb/ui/components/info-banner.scss
+++ b/kicweb/ui/components/info-banner.scss
@@ -3,6 +3,7 @@
   color: var(--color-text-primary);
   width: 100%;
   padding: var(--space-4) var(--space-2);
+  text-align: center;
 
   &, & .container {
     @include flex-center;
